2002-05-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-server-provider.[ch]: added create_database to
	GdaServerProvider class. Also, added some documentation.

	* libgda/gda-connection.h: added new set of GdaConnectionFeature
	values, describing all the schemas we support, so that we can
	query providers if they support the schemas.

	* libgda/gda-connection.c (gda_connection_create_database):
	new function.

	* providers/default/gda-default-provider.c:
	* providers/mysql/gda-mysql-provider.c:
	* providers/sqlite/gda-sqlite-provider.c:
	* providers/postgres/gda-postgres-provider.c: implemented
	create_database method. Added support for new GdaConnectionFeature
	values.

	* providers/sqlite/gda-sqlite-recordset.[ch]: made
	gda_sqlite_recordset_new return a GdaSqliteRecordset.

2002-05-15  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/tmpl/gda-data-model-hash.sgml: added a few lines.

	* libgda/gda-data-model-hash.[ch]: moved some functions around, added
	some doc, added a few more argument checks.

2002-05-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda.pc.in: removed ORBit, bonobo-activation and libbonobo.

	* configure.in: added report/gda-report.dtd to AC_OUTPUT.

2002-05-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/*.sgml:
	* libgda/gda-connection.c: added some documentation.

	* doc/C/tmpl/gda-recordset.sgml:
	* libgda/gda-recordset.[ch]: removed.

2002-05-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-log.c (gda_log_message, gda_log_error): made them show
	the error message at least.

	* Makefile.am:
	* configure.in: re-activated report directory.

	* report/Makefile.am:
	* report/*.[ch]: removed the CORBA engine. We'll start simple, or
	we'll never start :-)

	* report/libgda-report/Makefile.am: don't build CORBA files.

	* report/libgda-report/gda-report-datasource.[ch]:
	* report/libgda-report/gda-report-client.[ch]: removed.

	* doc/C/*: updated for changes in API files.
